# PosTalk

./: .gitignore  CMakeLists.txt  GESTURE_MAPPING.md  README.md
Source/DSP/Decay/: FDNReverb.cpp  FDNReverb.h  Freeze.h
Source/DSP/DiffusionNetwork/: Chorus.cpp  Chorus.h  CrossoverFilter.cpp  CrossoverFilter.h  DelayLine.h  DiffusionNetwork.cpp  DiffusionNetwork.h  DiffusionStage.h  FeedbackMatrix.h  LFO.h  SmoothedValue.h
Source/DSP/EarlyReflections/: EarlyReflections.cpp  EarlyReflections.h  SpinModulator.cpp  SpinModulator.h
Source/DSP/Input/: GainModule.h  InputFilter.cpp  InputFilter.h  Predelay.cpp  Predelay.h  Saturation.h  TimbreFilter.h
Source/DSP/Modulation/: PitchShifter.cpp  PitchShifter.h  Saturation.cpp  Saturation.h  TimbreFilter.cpp  TimbreFilter.h  Vibrato.cpp  Vibrato.h
Source/DSP/Output/: DryWetMixer.h  StereoWidener.h
Source/Parameters/: ParameterIDs.h  ParameterLayout.h
Source/Plugin/: CameraHelper.h  CameraHelper_mac.mm  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebviewBridge.h
WebUI/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
WebUI/PosTalk-design/: .thumbnail  PosTalk Aether v1.html  PosTalk Aether.html  app.v1.jsx  camera.jsx  camera.v1.jsx  components.jsx  components.v1.jsx  panels.jsx  panels.v1.jsx  styles.css  styles.v1.css
WebUI/src/: App.svelte  app.css  index.css  main.ts
WebUI/src/bridge/: bridge.ts  types.ts
WebUI/src/components/: Camera.svelte  FilterGraph.svelte  GestureController.svelte  GestureMap.svelte  Knob.svelte  KnobDiscrete.svelte  Lamp.svelte  LedToggle.svelte  NeuButton.svelte  NeuDiffusionNetworkGraph.svelte  NeuKnob.svelte  NeuKnobDiscrete.svelte  NeuNumber.svelte  NeuPanel.svelte  NeuSelector.svelte  NeuSlider.svelte  NeuXYPad.svelte  Number.svelte  NumberPill.svelte  Selector.svelte  Toggle.svelte  Tooltip.svelte  VSlider.svelte  XYPad.svelte  header.svelte
WebUI/src/components/References/: AudioPlugin.svelte  Knob.svelte  LedMatrix.svelte  Selector.svelte  Slider.svelte  Toggle.svelte  XYPad.svelte
WebUI/src/state/: store.ts
WebUI/src/stores/: cameraStream.ts  landmarks.ts  tooltip.ts
WebUI/src/types/: parameters.ts
WebUI/src/utils/: format.ts
docs/: ARCHITECTURE.md  CAMERA_WEBVIEW_LESSONS.md  EXPRESSION_PLAN.md  PosTalk_DSP_Technical_Audit.md  SETUP.md  TECHNICAL_DOCUMENT.md  UI_VERSIONS.md
docs/claude/: CLAUDE.md
v1 Project/: v1.als  v2.als
v1 Project/Backup/: v1 [2026-05-05 075621].als  v1 [2026-05-16 234857].als  v2 [2026-04-28 210022].als
